<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginBottom="12dp">

    <ImageView
        android:id="@+id/box_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/box_container_str"
        android:src="@drawable/box_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_avatar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/box_container"
        app:layout_constraintTop_toTopOf="@+id/box_container"
        app:layout_constraintBottom_toBottomOf="@+id/box_container"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:textColor="@color/colorTextIcons"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
        app:layout_constraintTop_toTopOf="@+id/box_container"
        app:layout_constraintBottom_toBottomOf="@id/box_container"
        tools:text="@string/item_row_name" />

    <ImageView
        android:id="@+id/arrow_to_detail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_arrow_right_24"
        app:layout_constraintTop_toTopOf="@+id/box_container"
        app:layout_constraintEnd_toEndOf="@+id/box_container"
        app:layout_constraintBottom_toBottomOf="@+id/box_container"
        android:contentDescription="@string/arrowToDetail" />


</androidx.constraintlayout.widget.ConstraintLayout>