<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <ImageView
            android:id="@+id/box_container_detail"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/box_container_str"
            android:src="@drawable/box_container_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/box_container_detail"
            app:layout_constraintStart_toStartOf="@+id/box_container_detail"
            app:layout_constraintTop_toTopOf="@+id/box_container_detail"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/profile_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/box_container_detail"
            app:layout_constraintStart_toStartOf="@+id/box_container_detail"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            tools:text="@string/profile_name_detail" />

        <TextView
            android:id="@+id/user_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/box_container_detail"
            app:layout_constraintStart_toStartOf="@+id/box_container_detail"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_detail"
            tools:text="@string/user_name_detail" />

        <TextView
            android:id="@+id/company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/location_detail"
            app:layout_constraintStart_toStartOf="@+id/box_container_detail"
            app:layout_constraintTop_toBottomOf="@+id/user_name_detail"
            tools:text="@string/company_detail" />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/box_container_detail"
            app:layout_constraintStart_toEndOf="@+id/company_detail"
            app:layout_constraintTop_toBottomOf="@+id/user_name_detail"
            tools:text="@string/location_detail" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/box_container_detail"
            app:tabTextColor="@color/colorTextIcons" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>




















